--- a/Resources/Prototypes/SoundCollections/lobby.yml
+++ b/Resources/Prototypes/SoundCollections/lobby.yml
@@ -17,3 +17,4 @@
     - /Audio/Corvax/Lobby/title2.ogg # Corvax-LobbyMusic
     - /Audio/Lobby/atomicamnesiammx.ogg
     - /Audio/Corvax/Lobby/service.ogg # Corvax-LobbyMusic
+    - /Audio/Evin/Lobby/EveryLightisBlinkingatOnce.ogg # Evin-LobbyMusci
