--- a/Resources/Prototypes/Catalog/Jukebox/Standard.yml
+++ b/Resources/Prototypes/Catalog/Jukebox/Standard.yml
@@ -39,3 +39,9 @@
   name: PigeonBeans - Sunset
   path:
     path: /Audio/Jukebox/sunset.ogg
+
+- type: jukebox
+  id: Mirror
+  name: Set It Off - Killer In The Mirror
+  path:
+    path: /Audio/Jukebox/Mirror.ogg
