--- a/Resources/Prototypes/Entities/Objects/Tools/access_configurator.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/access_configurator.yml
@@ -23,6 +23,7 @@
       - Atmospherics
       - Bar
       - Brig
+      - Blueshield
       - Detective
       - Captain
       - Cargo
@@ -90,6 +91,7 @@
     - Armory
     - Atmospherics
     - Bar
+    - Blueshield
     - Brig
     - Detective
     - Captain
