--- a/Resources/Prototypes/Corvax/Entities/Mobs/Customization/Markings/fox_parts.yml
+++ b/Resources/Prototypes/Corvax/Entities/Mobs/Customization/Markings/fox_parts.yml
@@ -2,7 +2,7 @@
   id: FoxEars
   bodyPart: HeadTop
   markingCategory: HeadTop
-  speciesRestriction: [Human, Dwarf]
+  speciesRestriction: [Human]
   sponsorOnly: false # Corvax-Sponsors
   sprites:
   - sprite: Corvax/Mobs/Customization/fox_parts.rsi
