--- a/Resources/Prototypes/_Evin/StatusEffects/job.yml
+++ b/Resources/Prototypes/_Evin/StatusEffects/job.yml
@@ -2,5 +2,5 @@
   parent: JobIcon
   id: JobIconBlueshield
   icon:
-    sprite: /Textures/_Evin/Interface/Misc/job_icons.rsi
-    state: blueshield
+    sprite: /Textures/Interface/Misc/job_icons.rsi
+    state: Blueshield
