Убрано всё и сразу, на режим ЯО и Зомби понижены требования на количество игроков.

--- a/Resources/Prototypes/game_presets.yml
+++ b/Resources/Prototypes/game_presets.yml
@@ -13,7 +13,7 @@
   id: AllAtOnce
   name: all-at-once-title
   description: all-at-once-description
-  showInVote: true
+  showInVote: false 
   rules:
     - Nukeops
     - Traitor
