--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -1066,7 +1066,7 @@
 
 - type: entity
   parent: BasePDA
-  id: SeniorEngineerPDA
+  id: BlueshieldPDA
   name: blueshield PDA
   description: blue one
   components:
