--- a/Resources/Prototypes/Roles/Jobs/Command/blueshield.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/blueshield.yml
@@ -36,7 +36,7 @@
   - Medical
 
 - type: startingGear
-  id: BlueShieldGear
+  id: BlueshieldGear
   equipment:
     jumpsuit: ClothingUniformJumpsuitBlueShield
     back: ClothingBackpackFilled
