--- a/Resources/Prototypes/_Evin/Entities/Mobs/Customization/Markings/felinid_markings.yml
+++ b/Resources/Prototypes/_Evin/Entities/Mobs/Customization/Markings/felinid_markings.yml
@@ -1,10 +1,21 @@
-# Felinid Ears
-
 - type: marking
   id: FelinidEarsBasic
   bodyPart: HeadTop
   markingCategory: HeadTop
-  speciesRestriction: [Felinid]
+  speciesRestriction: [Human, Dwarf, Felinid]
+  sponsorOnly: false
+  coloring:
+    default:
+      type:
+        !type:CategoryColoring
+          category: Hair
+      fallbackTypes:
+        - !type:SkinColoring
+    layers:
+      ears_cat_inner:
+        type:
+          !type:SimpleColoring
+            color: "#FFFFFF"
   sprites:
   - sprite: _Evin/Mobs/Customization/felinid_ears.rsi
     state: basic_outer
@@ -13,9 +24,7 @@
 
 - type: marking
   id: FelinidEarsCurled
-  bodyPart: HeadTop
-  markingCategory: HeadTop
-  speciesRestriction: [Felinid]
+  parent: FelinidEarsBasic
   sprites:
   - sprite: _Evin/Mobs/Customization/felinid_ears.rsi
     state: curled_outer
@@ -24,9 +33,7 @@
 
 - type: marking
   id: FelinidEarsDroopy
-  bodyPart: HeadTop
-  markingCategory: HeadTop
-  speciesRestriction: [Felinid]
+  parent: FelinidEarsBasic
   sprites:
   - sprite: _Evin/Mobs/Customization/felinid_ears.rsi
     state: droopy_outer
@@ -37,18 +44,27 @@
   id: FelinidEarsFuzzy
   bodyPart: HeadTop
   markingCategory: HeadTop
-  speciesRestriction: [Felinid]
+  speciesRestriction: [Human, Dwarf, Felinid]
+  sponsorOnly: false
+  coloring:
+    default:
+      type:
+        !type:CategoryColoring
+          category: Hair
+      fallbackTypes:
+        - !type:SkinColoring
+    layers:
+      ears_cat_inner:
+        type:
+          !type:SimpleColoring
+            color: "#FFFFFF"
   sprites:
-  - sprite: _Evin/Mobs/Customization/felinid_ears.rsi
-    state: basic_outer
   - sprite: _Evin/Mobs/Customization/felinid_ears.rsi
     state: fuzzy_inner
 
 - type: marking
   id: FelinidEarsStubby
-  bodyPart: HeadTop
-  markingCategory: HeadTop
-  speciesRestriction: [Felinid]
+  parent: FelinidEarsBasic
   sprites:
   - sprite: _Evin/Mobs/Customization/felinid_ears.rsi
     state: stubby_outer
@@ -57,22 +73,16 @@
 
 - type: marking
   id: FelinidEarsTall
-  bodyPart: HeadTop
-  markingCategory: HeadTop
-  speciesRestriction: [Felinid]
+  parent: FelinidEarsBasic
   sprites:
   - sprite: _Evin/Mobs/Customization/felinid_ears.rsi
     state: tall_outer
   - sprite: _Evin/Mobs/Customization/felinid_ears.rsi
     state: tall_inner
-  - sprite: _Evin/Mobs/Customization/felinid_ears.rsi
-    state: tall_fuzz
 
 - type: marking
   id: FelinidEarsTorn
-  bodyPart: HeadTop
-  markingCategory: HeadTop
-  speciesRestriction: [Felinid]
+  parent: FelinidEarsBasic
   sprites:
   - sprite: _Evin/Mobs/Customization/felinid_ears.rsi
     state: torn_outer
@@ -81,73 +91,63 @@
 
 - type: marking
   id: FelinidEarsWide
-  bodyPart: HeadTop
-  markingCategory: HeadTop
-  speciesRestriction: [Felinid]
+  parent: FelinidEarsBasic
   sprites:
   - sprite: _Evin/Mobs/Customization/felinid_ears.rsi
     state: wide_outer
   - sprite: _Evin/Mobs/Customization/felinid_ears.rsi
     state: wide_inner
 
-# Felinid Tails
-
 - type: marking
-  id: FelinidTailBasic
+  id: CatTail
   bodyPart: Tail
   markingCategory: Tail
-  speciesRestriction: [Felinid]
+  speciesRestriction: [Human, Dwarf, Felinid]
+  sponsorOnly: false
+  coloring:
+    default:
+      type:
+        !type:CategoryColoring
+          category: Hair
+      fallbackTypes:
+        - !type:CategoryColoring
+          category: FacialHair
+        - !type:SkinColoring
   sprites:
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_tail_tip
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_tail_stripes_even
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_tail_stripes_odd
+  - sprite: Mobs/Customization/cat_parts.rsi
+    state: tail_cat_wag
 
 - type: marking
-  id: FelinidTailBasicWithBow
-  bodyPart: Tail
-  markingCategory: Tail
-  speciesRestriction: [Felinid]
+  id: FelinidBasicBell
+  parent: CatTail
   sprites:
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_tail_tip
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_tail_stripes_even
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_tail_stripes_odd
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_bow
-
-- type: marking
-  id: FelinidTailBasicWithBell
-  bodyPart: Tail
-  markingCategory: Tail
-  speciesRestriction: [Felinid]
-  sprites:
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_tail_tip
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_tail_stripes_even
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_tail_stripes_odd
   - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
     state: basic_bell
 
 - type: marking
-  id: FelinidTailBasicWithBowAndBell
-  bodyPart: Tail
-  markingCategory: Tail
-  speciesRestriction: [Felinid]
+  id: FelinidBasicBow
+  parent: CatTail
+  sprites:
+  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
+    state: basic_bow
+
+- type: marking
+  id: FelinidBasicStripesEven
+  parent: CatTail
+  sprites:
+  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
+    state: basic_tail_sprites_even
+
+- type: marking
+  id: FelinidBasicStripesOdd
+  parent: CatTail
+  sprites:
+  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
+    state: basic_tail_stripes_odd
+
+- type: marking
+  id: FelinidBasicTip
+  parent: CatTail
   sprites:
   - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
     state: basic_tail_tip
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_tail_stripes_even
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_tail_stripes_odd
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_bow
-  - sprite: _Evin/Mobs/Customization/felinid_tails.rsi
-    state: basic_bell
