--- a/Resources/Prototypes/_Evin/Species/felinid.yml
+++ b/Resources/Prototypes/_Evin/Species/felinid.yml
@@ -1,10 +1,9 @@
 - type: species
-  id: felinid
-  name: фелинид
+  id: Felinid
+  name: Фелинид
   roundStart: true
   prototype: MobFelinid
   sprites: MobHumanSprites
   markingLimits: MobHumanMarkingLimits
   dollPrototype: MobFelinidDummy
   skinColoration: HumanToned
-
