--- a/Resources/Prototypes/_Evin/Entities/Mobs/Species/felinid.yml
+++ b/Resources/Prototypes/_Evin/Entities/Mobs/Species/felinid.yml
@@ -1,241 +1,65 @@
 - type: entity
   save: false
-  name: Base felinid
-  parent: BaseMobHuman
-  id: MobFelinidBase
+  name: Urist McCat
+  parent: BaseMobSpeciesOrganic
+  id: BaseMobFelinid
   abstract: true
   components:
+  - type: Hunger
+  - type: Thirst
+  - type: Icon
+    sprite: Mobs/Species/Slime/parts.rsi # It was like this beforehand, no idea why.
+    state: full
+  - type: Respirator
+    damage:
+      types:
+        Asphyxiation: 2
+    damageRecovery:
+      types:
+        Asphyxiation: -1.0
   - type: Sprite
-    netsync: false
     noRot: true
     drawdepth: Mobs
-    scale: 0.8, 0.8
-    layers:
-    - map: [ "enum.HumanoidVisualLayers.Chest" ]
-      color: "#e8b59b"
-      sprite: Mobs/Species/Human/parts.rsi
-      state: torso_m
-    - map: [ "enum.HumanoidVisualLayers.Head" ]
-      color: "#e8b59b"
-      sprite: Mobs/Species/Human/parts.rsi
-      state: head_m
-    - map: [ "enum.HumanoidVisualLayers.Eyes" ]
-      color: "#008800"
-      sprite: Mobs/Customization/eyes.rsi
-      state: eyes
-    - map: [ "enum.HumanoidVisualLayers.RArm" ]
-      color: "#e8b59b"
-      sprite: Mobs/Species/Human/parts.rsi
-      state: r_arm
-    - map: [ "enum.HumanoidVisualLayers.LArm" ]
-      color: "#e8b59b"
-      sprite: Mobs/Species/Human/parts.rsi
-      state: l_arm
-    - map: [ "enum.HumanoidVisualLayers.RLeg" ]
-      color: "#e8b59b"
-      sprite: Mobs/Species/Human/parts.rsi
-      state: r_leg
-    - map: [ "enum.HumanoidVisualLayers.LLeg" ]
-      color: "#e8b59b"
-      sprite: Mobs/Species/Human/parts.rsi
-      state: l_leg
-    - shader: StencilClear
-      sprite: Mobs/Species/Human/parts.rsi
-      state: l_leg
-    - shader: StencilMask
-      map: [ "enum.HumanoidVisualLayers.StencilMask" ]
-      sprite: Mobs/Customization/masking_helpers.rsi
-      state: female_full
-      visible: false
-    - map: [ "jumpsuit" ]
-      shader: StencilDraw
-    - map: [ "enum.HumanoidVisualLayers.LHand" ]
-      color: "#e8b59b"
-      sprite: Mobs/Species/Human/parts.rsi
-      state: l_hand
-    - map: [ "enum.HumanoidVisualLayers.RHand" ]
-      color: "#e8b59b"
-      sprite: Mobs/Species/Human/parts.rsi
-      state: r_hand
-    - map: [ "enum.HumanoidVisualLayers.LFoot" ]
-      color: "#e8b59b"
-      sprite: Mobs/Species/Human/parts.rsi
-      state: l_foot
-    - map: [ "enum.HumanoidVisualLayers.RFoot" ]
-      color: "#e8b59b"
-      sprite: Mobs/Species/Human/parts.rsi
-      state: r_foot
-    - map: [ "enum.HumanoidVisualLayers.Handcuffs" ]
-      color: "#ffffff"
-      sprite: Objects/Misc/handcuffs.rsi
-      state: body-overlay-2
-      visible: false
-    - map: [ "id" ]
-    - map: [ "gloves" ]
-    - map: [ "shoes" ]
-    - map: [ "ears" ]
-    - map: [ "outerClothing" ]
-    - map: [ "eyes" ]
-    - map: [ "belt" ]
-    - map: [ "neck" ]
-    - map: [ "back" ]
-    - map: [ "enum.HumanoidVisualLayers.FacialHair" ]
-      state: shaved
-      sprite: Mobs/Customization/human_facial_hair.rsi
-    - map: [ "enum.HumanoidVisualLayers.Hair" ]
-      state: bald
-      sprite: Mobs/Customization/human_hair.rsi
-    - map: [ "enum.HumanoidVisualLayers.HeadTop" ]
-      sprite: Mobs/Customization/masking_helpers.rsi
-      state: none
-      visible: false
-    - map: [ "mask" ]
-    - map: [ "head" ]
-    - map: [ "pocket1" ]
-    - map: [ "pocket2" ]
-    - map: [ "enum.HumanoidVisualLayers.Tail" ]
-      sprite: Mobs/Customization/masking_helpers.rsi
-      state: none
-      visible: false
-  - type: HumanoidAppearance
-    species: Felinid
+    scale: 1, 0.8
+  - type: Body
+    prototype: Dwarf
+    requiredLegs: 2
+  - type: Butcherable
+    butcheringType: Spike
+    spawned:
+    - id: FoodMeatHuman
+      amount: 5
   - type: Fixtures
     fixtures: # TODO: This needs a second fixture just for mob collisions.
       fix1:
         shape:
           !type:PhysShapeCircle
-          radius: 0.28
-        density: 180
+          radius: 0.35
+        density: 120
         restitution: 0.0
         mask:
         - MobMask
         layer:
         - MobLayer
-  - type: Body
-    prototype: Felinid
-  - type: Damageable
-    damageContainer: Biological
-  - type: MeleeWeapon
-    soundHit:
-      collection: Punch
-    animation: WeaponArcClaw
-    damage:
-      types:
-        Blunt: 1
-        Slash: 3
-  - type: Thieving
-    stealthy: true
-    stripTimeReduction: 1
+  - type: Vocal
+    sounds:
+      Male: UnisexDwarf
+      Female: FemaleDwarf
+      Unsexed: UnisexDwarf
+  - type: ReplacementAccent
+    accent: OwOaccent
   - type: Speech
-    speechSounds: Alto
-  - type: DamageOnHighSpeedImpact
-    damage:
-      types:
-        Blunt: 1
-    soundHit:
-      path: /Audio/Effects/hit_kick.ogg
-  - type: Stamina
-    excess: 85
-  - type: Perishable
-  - type: OwOAccent
+    speechSounds: Cat
+  - type: HumanoidAppearance
+    species: Human
+    hideLayersOnEquip:
+    - Hair
+    - Snout
 
 - type: entity
-  save: false
-  name: Felinid Dummy
-  parent: MobHumanDummy
+  parent: BaseSpeciesDummy
   id: MobFelinidDummy
   noSpawn: true
-  description: A dummy felinid meant to be used in character setup.
   components:
   - type: Sprite
-    netsync: false
-    noRot: true
-    drawdepth: Mobs
-    scale: 1, 1
-    layers:
-      - map: ["enum.HumanoidVisualLayers.Chest"]
-        color: "#e8b59b"
-        sprite: Mobs/Species/Human/parts.rsi
-        state: torso_m
-      - map: ["enum.HumanoidVisualLayers.Head"]
-        color: "#e8b59b"
-        sprite: Mobs/Species/Human/parts.rsi
-        state: head_m
-      - map: ["enum.HumanoidVisualLayers.Eyes"]
-        color: "#008800"
-        sprite: Mobs/Customization/eyes.rsi
-        state: eyes
-      - map: ["enum.HumanoidVisualLayers.RArm"]
-        color: "#e8b59b"
-        sprite: Mobs/Species/Human/parts.rsi
-        state: r_arm
-      - map: ["enum.HumanoidVisualLayers.LArm"]
-        color: "#e8b59b"
-        sprite: Mobs/Species/Human/parts.rsi
-        state: l_arm
-      - map: ["enum.HumanoidVisualLayers.RLeg"]
-        color: "#e8b59b"
-        sprite: Mobs/Species/Human/parts.rsi
-        state: r_leg
-      - map: ["enum.HumanoidVisualLayers.LLeg"]
-        color: "#e8b59b"
-        sprite: Mobs/Species/Human/parts.rsi
-        state: l_leg
-      - map: [ "enum.HumanoidVisualLayers.LFoot" ]
-        color: "#e8b59b"
-        sprite: Mobs/Species/Human/parts.rsi
-        state: l_foot
-      - map: [ "enum.HumanoidVisualLayers.RFoot" ]
-        color: "#e8b59b"
-        sprite: Mobs/Species/Human/parts.rsi
-        state: r_foot
-      - shader: StencilClear
-      - shader: StencilMask
-        map: ["enum.HumanoidVisualLayers.StencilMask"]
-        sprite: Mobs/Customization/masking_helpers.rsi
-        state: female_full
-        visible: false
-      - map: ["jumpsuit"]
-        shader: StencilDraw
-      - map: ["enum.HumanoidVisualLayers.LHand"]
-        color: "#e8b59b"
-        sprite: Mobs/Species/Human/parts.rsi
-        state: l_hand
-      - map: ["enum.HumanoidVisualLayers.RHand"]
-        color: "#e8b59b"
-        sprite: Mobs/Species/Human/parts.rsi
-        state: r_hand
-      - map: ["enum.HumanoidVisualLayers.Handcuffs"]
-        color: "#ffffff"
-        sprite: Objects/Misc/handcuffs.rsi
-        state: body-overlay-2
-        visible: false
-      - map: ["id"]
-      - map: ["gloves"]
-      - map: ["shoes"]
-      - map: ["ears"]
-      - map: ["outerClothing"]
-      - map: ["eyes"]
-      - map: ["belt"]
-      - map: ["neck"]
-      - map: ["back"]
-      - map: ["enum.HumanoidVisualLayers.FacialHair"]
-        state: shaved
-        sprite: Mobs/Customization/human_facial_hair.rsi
-      - map: ["enum.HumanoidVisualLayers.Hair"]
-        state: bald
-        sprite: Mobs/Customization/human_hair.rsi
-      - map: [ "enum.HumanoidVisualLayers.HeadTop" ]
-        sprite: Mobs/Customization/masking_helpers.rsi
-        state: none
-        visible: false
-      - map: ["mask"]
-      - map: ["head"]
-      - map: [ "pocket1" ]
-      - map: [ "pocket2" ]
-      - map: ["hand-left"]
-      - map: ["hand-right"]
-      - map: [ "enum.HumanoidVisualLayers.Tail" ]
-        sprite: Mobs/Customization/masking_helpers.rsi
-        state: none
-        visible: false
+    scale: 0.8, 0.8
