--- a/Resources/Prototypes/_Evin/Species/felinid.yml
+++ b/Resources/Prototypes/_Evin/Species/felinid.yml
@@ -4,6 +4,21 @@
   roundStart: true
   prototype: MobFelinid
   sprites: MobHumanSprites
-  markingLimits: MobHumanMarkingLimits
+  markingLimits: MobFelinidMarkingLimits
   dollPrototype: MobFelinidDummy
   skinColoration: HumanToned
+
+- type: markingPoints
+  id: MobFelinidMarkingLimits
+  points:
+    Hair:
+      points: 1
+      required: false
+    Tail:
+      points: 2
+      required: true
+      defaultMarkings: [ CatTail ]
+    HeadTop:
+      points: 1
+      required: true
+      defaultMarkings: [ CatEars ]
