--- a/Resources/Prototypes/Entities/Structures/Walls/girders.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/girders.yml
@@ -56,6 +56,41 @@
     price: 10
 
 - type: entity
+  id: DisplacedGirder
+  parent: Girder
+  name: displaced girder
+  description: Girder with poorly tightened bolts, looks unstable
+  components:
+  - type: Construction
+    graph: Girder
+    node: girder
+  - type: Sprite
+    sprite: Structures/Walls/false_walls/diplaced_girder.rsi
+    state: displaced
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 100
+      behaviors:
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+    - trigger:
+        !type:DamageTrigger
+        damage: 25
+      behaviors:
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          SheetSteel1:
+            min: 1
+            max: 1
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+      - !type:PlaySoundBehavior
+        sound:
+          collection: MetalBreak
+
+- type: entity
   id: ReinforcedGirder
   parent: Girder
   name: reinforced girder
