Лисьи хвосты, убрал лимит на роли для новичков. Добавил больше слотов на станции. Поменял название сервера в лобби при запуске.

--- a/Resources/Prototypes/Roles/Jobs/Engineering/technical_assistant.yml
+++ b/Resources/Prototypes/Roles/Jobs/Engineering/technical_assistant.yml
@@ -9,7 +9,7 @@
     - !type:DepartmentTimeRequirement
       department: Engineering
       time: 12000 #10 hrs # Corvax-RoleTime
-      inverted: true # stop playing intern if you're good at engineering!
+      inverted: false # stop playing intern if you're good at engineering!
   startingGear: TechnicalAssistantGear
   icon: "JobIconTechnicalAssistant"
   supervisors: job-supervisors-engineering
