--- a/Resources/Prototypes/Roles/Jobs/Medical/medical_intern.yml
+++ b/Resources/Prototypes/Roles/Jobs/Medical/medical_intern.yml
@@ -7,7 +7,7 @@
     - !type:DepartmentTimeRequirement
       department: Medical
       time: 12000 #10 hrs # Corvax-RoleTime
-      inverted: true # stop playing intern if you're good at med!
+      inverted: false # stop playing intern if you're good at med!
   startingGear: MedicalInternGear
   icon: "JobIconMedicalIntern"
   supervisors: job-supervisors-medicine
