--- a/Resources/Prototypes/Roles/Jobs/Science/research_assistant.yml
+++ b/Resources/Prototypes/Roles/Jobs/Science/research_assistant.yml
@@ -7,7 +7,7 @@
     - !type:DepartmentTimeRequirement
       department: Science
       time: 12000 #10 hrs # Corvax-RoleTime
-      inverted: true # stop playing intern if you're good at science!
+      inverted: false # stop playing intern if you're good at science!
   startingGear: ResearchAssistantGear
   icon: "JobIconResearchAssistant"
   supervisors: job-supervisors-science
