--- a/Resources/Prototypes/Roles/Jobs/Security/security_cadet.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/security_cadet.yml
@@ -9,7 +9,7 @@
     - !type:DepartmentTimeRequirement
       department: Security
       time: 24000 #20 hrs # Corvax-RoleTime
-      inverted: true # stop playing intern if you're good at security!
+      inverted: false # stop playing intern if you're good at security!
   startingGear: SecurityCadetGear
   icon: "JobIconSecurityCadet"
   supervisors: job-supervisors-security
