--- a/Resources/Prototypes/Corvax/Maps/outpost.yml
+++ b/Resources/Prototypes/Corvax/Maps/outpost.yml
@@ -20,6 +20,7 @@
             - Passenger
           availableJobs:
             #service
+            Blueshield: [1, 1]
             Captain: [ 1, 1 ]
             IAA: [ 1, 1 ] # Corvax-IAA
             HeadOfPersonnel: [ 1, 1 ]
