--- a/Resources/Prototypes/Corvax/Maps/pilgrim.yml
+++ b/Resources/Prototypes/Corvax/Maps/pilgrim.yml
@@ -22,6 +22,7 @@
             - Passenger
           availableJobs:
             # service
+            Blueshield: [1, 1]
             HeadOfPersonnel: [ 1, 1 ]
             Passenger: [ -1, -1 ]
             ServiceWorker: [ 3, 3 ]
