--- a/Resources/Prototypes/Maps/atlas.yml
+++ b/Resources/Prototypes/Maps/atlas.yml
@@ -43,6 +43,7 @@
             ResearchAssistant: [ 1, 3 ]
             Borg: [ 2, 2 ]
             #security
+            Blueshield: [1, 1]
             HeadOfSecurity: [ 1, 1 ]
             Warden: [ 1, 1 ]
             SecurityOfficer: [ 3, 3 ]
