--- a/Resources/Prototypes/Maps/packed.yml
+++ b/Resources/Prototypes/Maps/packed.yml
@@ -44,6 +44,7 @@
             Scientist: [ 4, 4 ]
             ResearchAssistant: [ 2, 2 ]
             #security
+            Blueshield: [1, 1]
             HeadOfSecurity: [ 1, 1 ]
             Warden: [ 1, 1 ]
             SecurityOfficer: [ 4, 4 ]
