--- a/Resources/Prototypes/_Evin/Entities/Mobs/Species/felinid.yml
+++ b/Resources/Prototypes/_Evin/Entities/Mobs/Species/felinid.yml
@@ -1,71 +1,85 @@
 - type: entity
   save: false
-  name: Urist McCat
-  parent: BaseMobSpeciesOrganic
-  id: BaseMobFelinid
+  name: Urist McFelinid
+  parent: BaseMobHuman
+  id: MobFelinidBase
   abstract: true
   components:
-  - type: Hunger
-  - type: Thirst
-  - type: Icon
-    sprite: Mobs/Species/Slime/parts.rsi # It was like this beforehand, no idea why.
-    state: full
+  - type: Sprite
+    scale: 0.8, 0.8
+  - type: HumanoidAppearance
+    species: Felinid
+  - type: Fixtures
+    fixtures: # TODO: This needs a second fixture just for mob collisions.
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.28
+        density: 140
+        restitution: 0.0
+        mask:
+        - MobMask
+        layer:
+        - MobLayer
+  - type: Body
+    prototype: Felinid
+  - type: Damageable
+    damageContainer: Biological
+  - type: MeleeWeapon
+    hidden: true
+    soundHit:
+      collection: Punch
+    angle: 30
+    animation: WeaponArcClaw
+    attackRate: 1
+    damage:
+      types:
+        Blunt: 1
+        Slash: 5
+  - type: Thieving
+    stealthy: true
+    stripTimeReduction: 1
+  - type: Speech
+    speechSounds: Cat
+  - type: DamageOnHighSpeedImpact
+    damage:
+      types:
+        Blunt: 1
+    soundHit:
+      path: /Audio/Effects/hit_kick.ogg
+  - type: Stamina
+    critThreshold: 85
+  - type: PseudoItem
+  - type: Vocal
+    sounds:
+      Male: MaleFelinid
+      Female: FemaleFelinid
+      Unsexed: MaleFelinid
+  - type: Felinid
   - type: Respirator
     damage:
       types:
-        Asphyxiation: 2
+        Asphyxiation: 1.5
     damageRecovery:
       types:
-        Asphyxiation: -1.0
-  - type: Sprite
-    noRot: true
-    drawdepth: Mobs
-    scale: 1, 0.8
-  - type: Body
-    prototype: Dwarf
-    requiredLegs: 2
+        Asphyxiation: -1.5
+  - type: NpcFactionMember
+    factions:
+      - NanoTrasen
   - type: InteractionPopup
     successChance: 1
     interactSuccessString: hugging-success-generic
     interactSuccessSpawn: EffectHearts
     interactSuccessSound:
       path: /Audio/Animals/cat_meow.ogg
-  - type: Butcherable
-    butcheringType: Spike
-    spawned:
-    - id: FoodMeatHuman
-      amount: 5
-  - type: Fixtures
-    fixtures: # TODO: This needs a second fixture just for mob collisions.
-      fix1:
-        shape:
-          !type:PhysShapeCircle
-          radius: 0.35
-        density: 120
-        restitution: 0.0
-        mask:
-        - MobMask
-        layer:
-        - MobLayer
-  - type: Vocal
-    sounds:
-      Male: UnisexDwarf
-      Female: FemaleDwarf
-      Unsexed: UnisexDwarf
-  - type: OwOAccent
-  - type: Speech
-    speechSounds: Cat
-    speechVerb: SmallMob
-  - type: HumanoidAppearance
-    species: Human
-    hideLayersOnEquip:
-    - Hair
-    - Snout
+
 
 - type: entity
-  parent: BaseSpeciesDummy
+  save: false
+  name: Urist McHands
+  parent: MobHumanDummy
   id: MobFelinidDummy
   noSpawn: true
-  components:
-  - type: Sprite
-    scale: 0.8, 0.8
+  description: A dummy felinid meant to be used in character setup.
+
+#Nya~~
