--- a/Resources/Prototypes/_Evin/Entities/Mobs/Player/felinid.yml
+++ b/Resources/Prototypes/_Evin/Entities/Mobs/Player/felinid.yml
@@ -1,5 +1,5 @@
 - type: entity
   save: false
-  name: Urist McCat
-  parent: BaseMobFelinid
+  name: Player felinid
+  parent: [MobFelinidBase, BaseMob]
   id: MobFelinid
